# schedrem

./: README.md  pyproject.toml
examples/: config.yml
schedrem/: __main__.py  config.py  manager.py  messagebox.py  util.py
tests/: nearest_future_test.py
